--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".Change_password"
+            android:exported="true" />
+        <activity
+            android:name=".Change_pass"
+            android:exported="true" />
         <activity android:name=".home">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,8 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Foods">
-        </activity>
+        <activity android:name=".Foods" />
         <activity android:name=".adddata" />
         <activity android:name=".MainActivity" />
     </application>
